--- a/package.json
+++ b/package.json
@@ -41,18 +41,19 @@
         "eslint-plugin-kvs-webrtc": "file:eslint",
         "eslint-plugin-prettier": "^3.1.0",
         "fork-ts-checker-webpack-plugin": "^4.1.2",
-        "jest": "^25.5.4",
+        "jest": "^28.1.2",
         "license-webpack-plugin": "^2.1.2",
         "prettier": "^1.18.2",
-        "ts-jest": "^25.4.0",
+        "ts-jest": "^28.0.5",
         "ts-loader": "^6.0.4",
-        "typescript": "^3.6.2",
-        "webpack": "^4.39.3",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.2",
+        "typescript": "^4.7.4",
+        "webpack": "^5.0.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.7.3",
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
+        "amazon-kinesis-video-streams-webrtc": "^1.0.8",
         "isomorphic-webcrypto": "^2.3.6",
         "tslib": "^1.10.0"
     }
