--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
         "ts-jest": "^29.1.0",
         "ts-loader": "^6.0.4",
         "typescript": "^4.9.5",
-        "webpack": "^5.0.0",
-        "webpack-cli": "^4.7.0",
-        "webpack-dev-server": "^4.0.0",
-        "webpack-merge": "^4.2.2"
+        "webpack": "^5.80.0",
+        "webpack-cli": "^5.0.2",
+        "webpack-dev-server": "^4.13.3",
+        "webpack-merge": "^5.8.0"
     },
     "dependencies": {
         "isomorphic-webcrypto": "^2.3.6",
@@ -65,6 +65,8 @@
     },
     "overrides": {
         "qs": "6.7.3",
+        "xml2js": "^0.5.0",
+        "json5": "^2.2.3",
         "@types/babel__traverse": "7.18.2",
         "@types/express-serve-static-core": "4.17.29"
     }
